PROJECT (cdrkit)
SUBDIRS(cdda2wav cdrecord libdeflt libedc libfile libhfs_iso libparanoia librscg libscg libschily libunls mkisofs readcd rscsi 3rd-party/zisofs_tools 3rd-party/dirsplit include)

SET(BINS_SET cdrecord/wodim readcd/readcd 3rd-party/zisofs_tools/mkzftree)
FOREACH(app ${BINS_SET})
   install(PROGRAMS ${CMAKE_BINARY_DIR}/${app} DESTINATION bin)
ENDFOREACH(app ${BINS_SET})
FOREACH(app ${SCRIPTS_SET})
   install(PROGRAMS ${CMAKE_SOURCE_DIR}/${app} DESTINATION bin)
ENDFOREACH(app ${BINS_SET})
