PROJECT (RSCSI)
INCLUDE_DIRECTORIES(../include ../cdrecord . ${CMAKE_BINARY_DIR} )
#ADD_DEFINITIONS(-DUSE_LARGEFILES -DABORT_DEEP_ISO_ONLY -DAPPLE_HYB -DUDF -DDVD_VIDEO -DSORTING -DHAVE_CONFIG_H -DUSE_LIBSCHILY -DUSE_SCG)

LINK_DIRECTORIES(../libschily ../libscg ../libdeflt ../libfile)
ADD_EXECUTABLE (rscsi rscsi.c)
#SET_SOURCE_FILES_PROPERTIES(rscsi.c )
TARGET_LINK_LIBRARIES(rscsi scg schily deflt file)
#SET_TARGET_PROPERTIES(rscsi PROPERTIES  SKIP_BUILD_RPATH TRUE)
INSTALL(TARGETS rscsi DESTINATION sbin)

