PROJECT (RSCSI)
INCLUDE_DIRECTORIES(../include ../cdrecord ${CMAKE_BINARY_DIR} )
INCLUDE(../include/AddScgBits.cmake)

LINK_DIRECTORIES(../libschily ../libscg ../libdeflt)
ADD_EXECUTABLE (rscsi rscsi.c)
#SET_SOURCE_FILES_PROPERTIES(rscsi.c )
TARGET_LINK_LIBRARIES(rscsi ${SCG_LIBS} schily deflt)
#SET_TARGET_PROPERTIES(rscsi PROPERTIES  SKIP_BUILD_RPATH TRUE)
INSTALL(TARGETS rscsi DESTINATION sbin)

